@@ -23,6 +23,7 @@ t/cv.t
 t/dist.t
 t/eol.t
 t/expect.t
+t/fixme.t
 t/gv.t
 t/is_mobile.t
 t/is_robot.t
